infrastructure/argocd/applications/ingress-rule.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scheduling-engine-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
      - argocd.se-dev.nuvolar.eu
    secretName: scheduling-engine-tls
  rules:
  - host: argocd.se-dev.nuvolar.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: https
